# pixify

./: CMakeLists.txt  README.md
src/: main.cpp  pixelate.cpp  stdinc.h
